# stealth

./: package-lock.json  package.json  pr-body.md  vite.config.ts  wrangler.jsonc
.github/workflows/: ci.yml  publish-api-issue-drafts.yml
contracts/soroban/policies/: Cargo.toml  README.md
contracts/soroban/policies/src/: lib.rs
contracts/soroban/policies/test_snapshots/auth_boundaries/: delegate_scope_is_not_transitive_across_capabilities.1.json  delegated_mutation_requires_only_the_actors_authorization.1.json  owner_authorization_is_bound_to_exact_arguments.1.json  reads_and_evaluation_require_no_authorization.1.json  revoked_delegate_loses_authority.1.json  set_delegate_requires_owner_not_delegate.1.json  set_policy_fails_when_another_party_authorizes.1.json  set_policy_fails_without_owner_authorization.1.json  unscoped_actor_is_rejected_with_unauthorized_delegate.1.json
docs/architecture/: README.md
docs/deployment/: README.md
docs/product/: README.md
docs/protocol/: README.md
docs/security/: README.md
infra/cloudflare/: README.md
infra/stellar/: README.md
protocol/federation/: README.md
protocol/messages/: README.md
protocol/relay/: README.md
protocol/schemas/: README.md
protocol/vectors/: vectors.json
public/brand/: README.md
scripts/deploy/: README.md
scripts/dev/: README.md
scripts/protocol/: README.md
src/: routeTree.gen.ts  styles.css
src/config/: README.md
src/mocks/: README.md
src/routes/: __root.tsx  index.tsx  motion-gallery.tsx
src/stores/: README.md
src/types/: README.md
tests/contracts/: README.md
(+378 files in other folders)
